tests/ui/reference.stderr
error: immediately dereferencing a reference
  --> $DIR/reference.rs:19:13
   |
19 |     let b = *&a;
   |             ^^^ help: try this `a`
   |
note: lint level defined here
  --> $DIR/reference.rs:14:8
   |
14 | #[deny(deref_addrof)]
   |        ^^^^^^^^^^^^

error: immediately dereferencing a reference
  --> $DIR/reference.rs:24:13
   |
24 |     let b = *&get_number();
   |             ^^^^^^^^^^^^^^ help: try this `get_number()`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:32:13
   |
32 |     let b = *&bytes[1..2][0];
   |             ^^^^^^^^^^^^^^^^ help: try this `bytes[1..2][0]`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:39:13
   |
39 |     let b = *&(a);
   |             ^^^^^ help: try this `(a)`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:44:13
   |
44 |     let b = *(&a);
   |             ^^^^^ help: try this `a`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:49:13
   |
49 |     let b = *((&a));
   |             ^^^^^^^ help: try this `a`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:54:13
   |
54 |     let b = *&&a;
   |             ^^^^ help: try this `&a`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:59:14
   |
59 |     let b = **&aref;
   |              ^^^^^^ help: try this `aref`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:66:14
   |
66 |     let b = **&&a;
   |              ^^^^ help: try this `&a`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:73:17
   |
73 |         let y = *&mut x;
   |                 ^^^^^^^ help: try this `x`

error: immediately dereferencing a reference
  --> $DIR/reference.rs:83:18
   |
83 |         let y = **&mut &mut x;
   |                  ^^^^^^^^^^^^ help: try this `&mut x`

error: aborting due to 11 previous errors

